fix(css): vertical margin on mobile

--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -40,7 +40,7 @@ body {
 
 @media (max-width: 768px) {
   body {
-    padding: 0rem 0.5rem;
+    padding: 0.5rem 0.5rem;
   }
 }
 
